resources/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: MONGODB_DATABASE
              value: ecommerce
            - name: MONGODB_URI
              value: mongodb://mongodb:27017/
            - name: REDIS_URI
              value: redis:6379
          image: 705905076562.dkr.ecr.us-east-1.amazonaws.com/ecommerce-api
          name: api
          resources: {}
      restartPolicy: Always
status: {}
