resources/api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: api-74594c7879-phq6w
  name: api-74594c7879-phq6w
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: api-74594c7879-phq6w
  type: NodePort
